--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,69 +12,62 @@ steps:
       - >-
         ./dockerignore/kubernetes-configs/readr-nuxt/overlays/${BRANCH_NAME}/configs/config.js
       - ./configs/config.js
+
+  - name: bash
+    args:
+      - rm
+      - "-R"
+      - ./configs.build
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - "docker pull gcr.io/${PROJECT_ID}/readr-nuxt:${BRANCH_NAME} || exit 0"
   - name: gcr.io/cloud-builders/docker
     args:
       - build
-      - '-t'
-      - 'gcr.io/${PROJECT_ID}/readr-nuxt:${BRANCH_NAME}_${SHORT_SHA}'
+      - "-t"
+      - "gcr.io/${PROJECT_ID}/readr-nuxt:${BRANCH_NAME}"
+      - "-t"
+      - "gcr.io/$PROJECT_ID/readr-nuxt:${BRANCH_NAME}_${COMMIT_SHA}
+      - "--cache-from"
+      - "gcr.io/$PROJECT_ID/readr-nuxt:${BRANCH_NAME}"
+      - "--build-arg"
+      - "ENV=${BRANCH_NAME}"
       - .
   - name: gcr.io/cloud-builders/docker
     args:
       - push
-      - gcr.io/$PROJECT_ID/readr-nuxt:${BRANCH_NAME}_${SHORT_SHA}
-  - name: launcher.gcr.io/google/ubuntu1604
+      - gcr.io/$PROJECT_ID/readr-nuxt:${BRANCH_NAME}
+  - name: gcr.io/cloud-builders/docker
+    args:
+      - push
+      - gcr.io/$PROJECT_ID/readr-nuxt:${BRANCH_NAME}_${COMMIT_SHA}
+
+  # Deploy container image to Cloud Runs
+  - name: gcr.io/cloud-builders/gcloud
+    id: Deploy Image
+    entrypoint: 'bash'
     args:
       - '-c'
-      - >
-        # install kustomize
+      - |
 
-        curl -s
-        "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"
-        | bash
+        # read cloud run service names from substitution variable
+        IFS=',' read -r -a cloud_runs <<< "$_CLOUD_RUN_SERVICE_NAMES"
 
+        for cr in "${cloud_runs[@]}"
+        do
 
-        # mv kubernetes-configs folder
+        # deploy cloud run service iteratively
+        gcloud run deploy "$cr" --image gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${COMMIT_SHA} --region asia-east1
 
-        mv ./dockerignore/kubernetes-configs /workspace/kubernetes-configs
+        done
 
-
-        # cd to (dev|staging) environment kustimzation root
-
-        cd
-        /workspace/kubernetes-configs/readr-nuxt/overlays/${BRANCH_NAME}
-
-
-        # update docker image
-
-        /workspace/kustomize edit set image
-        readr-nuxt=gcr.io/${PROJECT_ID}/readr-nuxt:${BRANCH_NAME}_${SHORT_SHA}
-
-
-        # back to kubernetes-configs root
-
-        cd /workspace/kubernetes-configs
-
-
-        /workspace/kustomize build
-        "./readr-nuxt/overlays/${BRANCH_NAME}" >>
-        $_FILE_TO_DEPLOY
-
-        # print out configs
-
-        cat $_FILE_TO_DEPLOY
-    entrypoint: bash
-  - name: gcr.io/cloud-builders/kubectl
-    env:
-      - CLOUDSDK_COMPUTE_REGION=asia-east1
-      - CLOUDSDK_CONTAINER_CLUSTER=readr-prod-v2
-    args:
-      - apply
-      - '-f'
-      - $_FILE_TO_DEPLOY
-      - '--validate=true'
 timeout: 1200s
 images:
   - gcr.io/$PROJECT_ID/readr-nuxt
 substitutions:
-  _FILE_TO_DEPLOY: /workspace/config-to-deploy.txt
-
+  _TARGET_PACKAGE: '' # default value
+  _IMAGE_NAME: '' # default value
+  _CLOUD_RUN_SERVICE_NAMES: '' # default value
+  _ENV: 'prod' # default value
